--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "filament/actions": "^3.2",
         "filament/filament": "3.2.57",
         "filament/forms": "^3.2",
+        "filament/infolists": "3.2.57",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
