--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
         "filament/forms": "^3.2",
         "filament/infolists": "3.2.57",
         "laravel/framework": "^11.9",
+        "laravel/socialite": "^5.16",
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
