--- a/composer.json
+++ b/composer.json
@@ -2,14 +2,17 @@
     "name": "laravel/laravel",
     "type": "project",
     "description": "The skeleton application for the Laravel framework.",
-    "keywords": ["laravel", "framework"],
+    "keywords": [
+        "laravel",
+        "framework"
+    ],
     "license": "MIT",
     "require": {
         "php": "^8.2",
         "filament/actions": "^3.2",
-        "filament/filament": "3.2.57",
+        "filament/filament": "^3.2",
         "filament/forms": "^3.2",
-        "filament/infolists": "3.2.57",
+        "filament/infolists": "^3.2",
         "filament/notifications": "^3.2",
         "laravel/framework": "^11.9",
         "laravel/socialite": "^5.16",
