--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "laravel/tinker": "^2.9",
         "livewire/livewire": "^3.4",
         "livewire/volt": "^1.0",
-        "nunomaduro/termwind": "^2.0"
+        "nunomaduro/termwind": "^2.0",
+        "socialiteproviders/microsoft-azure": "^5.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
